[gd_scene load_steps=30 format=2]

[ext_resource path="res://menu/name.png" type="Texture" id=1]
[ext_resource path="res://fonts/LuckiestGuy-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://gui/sider.tscn" type="PackedScene" id=3]
[ext_resource path="res://menu/menu.gd" type="Script" id=4]
[ext_resource path="res://gui/sider.gd" type="Script" id=5]
[ext_resource path="res://gui/titlefont.tres" type="DynamicFont" id=6]
[ext_resource path="res://gui/images/side.png" type="Texture" id=7]
[ext_resource path="res://gui/images/sidepres.png" type="Texture" id=8]
[ext_resource path="res://gui/images/copy.png" type="Texture" id=9]
[ext_resource path="res://gui/images/players.png" type="Texture" id=10]
[ext_resource path="res://gui/debug/console.tscn" type="PackedScene" id=11]
[ext_resource path="res://gui/images/start.png" type="Texture" id=12]
[ext_resource path="res://gui/images/loadmain.png" type="Texture" id=13]
[ext_resource path="res://menu/nameman.gd" type="Script" id=14]
[ext_resource path="res://gui/images/edit.png" type="Texture" id=15]
[ext_resource path="res://menu/ipman.gd" type="Script" id=16]
[ext_resource path="res://gui/picbutton.tscn" type="PackedScene" id=17]
[ext_resource path="res://menu/error.gd" type="Script" id=18]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 64
outline_size = 1
outline_color = Color( 0.611765, 0.101961, 0.101961, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 38
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 2 )

[node name="menu" type="Node"]
script = ExtResource( 4 )
saveloc = "user://randamuser.json"
loadbarpath = NodePath("partyman/br/load")

[node name="cam" type="Camera2D" parent="."]
position = Vector2( 506.488, 294.822 )
z_index = 1
z_as_relative = false
current = true
smoothing_enabled = true
script = ExtResource( 5 )
bottom = true
right = true
scaleview = Vector2( 0.5, 0.5 )

[node name="error" type="Node2D" parent="cam"]
visible = false
script = ExtResource( 18 )

[node name="back" type="Panel" parent="cam/error"]
margin_left = -288.0
margin_top = -72.0
margin_right = 289.0
margin_bottom = 83.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="cam/error"]
margin_left = -279.0
margin_top = -58.6606
margin_right = 284.0
margin_bottom = -2.66064
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.623529, 0.141176, 0.141176, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "this is an error, something went absolutelly fatally and we had to show this window,sorry."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backtotitle" type="Button" parent="cam/error"]
margin_left = -42.7737
margin_top = 20.0
margin_right = 43.2263
margin_bottom = 59.0
custom_fonts/font = SubResource( 2 )
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="topright" type="Node2D" parent="cam"]
position = Vector2( 514, -296 )
script = ExtResource( 5 )
bottom = true
right = true
scaleview = Vector2( 0.5, -0.5 )

[node name="console" parent="cam/topright" instance=ExtResource( 11 )]
visible = false
position = Vector2( 3.46497, -1.09236 )
bypress = true

[node name="partyman" parent="." instance=ExtResource( 3 )]
position = Vector2( 1023.96, -0.078742 )
right = true

[node name="titlefri" parent="partyman" instance=ExtResource( 3 )]
position = Vector2( -3.76288, -5.02569 )

[node name="title" type="Label" parent="partyman/titlefri"]
margin_left = 84.0
margin_top = 26.0
margin_right = 758.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.231373, 0.156863, 0.156863, 1 )
text = "GET YOUR FRIENDS IN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="TextureButton" parent="partyman/titlefri"]
margin_left = 93.3073
margin_top = 22.1735
margin_right = 173.307
margin_bottom = 102.173
rect_scale = Vector2( -0.673, 0.627 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="code" parent="partyman" instance=ExtResource( 3 )]
position = Vector2( 1.40765, 600.564 )
bottom = true

[node name="back" type="Panel" parent="partyman/code"]
margin_left = -0.105469
margin_top = -181.053
margin_right = 668.895
margin_bottom = -0.0526123
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="partyman/code"]
margin_left = 6.36389
margin_top = -168.999
margin_right = 46.3639
margin_bottom = -154.999
custom_fonts/font = SubResource( 5 )
text = "match code:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="code" type="Label" parent="partyman/code"]
margin_left = 3.10913
margin_top = -116.891
margin_right = 665.109
margin_bottom = -35.8909
custom_fonts/font = SubResource( 6 )
text = "code test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ip" type="Label" parent="partyman/code"]
visible = false
margin_left = 6.32849
margin_top = -25.3536
margin_right = 66.3285
margin_bottom = -11.3536
text = "private ip"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="port" type="Label" parent="partyman/code"]
margin_left = 134.549
margin_top = -24.2406
margin_right = 204.549
margin_bottom = -10.2406
text = "server port"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ipshow" type="Button" parent="partyman/code"]
margin_left = 4.50269
margin_top = -49.5298
margin_right = 65.5027
margin_bottom = -29.5298
text = "show ip"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="copy" type="Button" parent="partyman/code"]
margin_left = 613.664
margin_top = -215.318
margin_right = 705.664
margin_bottom = -129.318
icon = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tr" parent="partyman" instance=ExtResource( 3 )]
position = Vector2( 1028.77, -0.417122 )
right = true

[node name="playerico" type="Sprite" parent="partyman/tr"]
position = Vector2( -85.6266, 36.2875 )
texture = ExtResource( 10 )

[node name="lab" type="Label" parent="partyman/tr"]
margin_left = -70.1538
margin_top = 23.0105
margin_right = -10.1538
margin_bottom = 56.0105
custom_fonts/font = SubResource( 7 )
text = "1/5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nameman" type="Node" parent="partyman/tr"]
script = ExtResource( 14 )
__meta__ = {
"_editor_description_": "manages names taken from the nameman singleton and puts them in the UI"
}
buttony = 90.0

[node name="br" parent="partyman" instance=ExtResource( 3 )]
position = Vector2( 1053.11, 611.31 )
bottom = true
right = true

[node name="start" type="Button" parent="partyman/br"]
margin_left = -77.5503
margin_top = -96.7934
margin_right = -12.5503
margin_bottom = -10.7934
icon = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="load" type="TextureProgress" parent="partyman/br"]
margin_left = -189.561
margin_top = -55.6622
margin_right = -89.5607
margin_bottom = -50.6622
step = 0.0
value = 1.0
texture_progress = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="topleft" parent="." instance=ExtResource( 3 )]

[node name="name" type="Sprite" parent="topleft"]
position = Vector2( 287.635, 57.8056 )
texture = ExtResource( 1 )

[node name="join" parent="topleft" instance=ExtResource( 17 )]
margin_left = 50.6506
margin_top = 125.313
margin_right = 380.651
margin_bottom = 314.313

[node name="pic" parent="topleft/join" index="0"]
margin_left = 6.0
margin_top = 4.0
margin_right = 326.0
margin_bottom = 184.0

[node name="name" parent="topleft/join" index="1"]
text = "story"

[node name="topleftmain" parent="." instance=ExtResource( 3 )]
position = Vector2( 1023.57, 0.498077 )
right = true
scalesondesktop = true

[node name="name" type="Label" parent="topleftmain"]
margin_left = -396.552
margin_top = 54.7389
margin_right = -71.5524
margin_bottom = 87.7389
custom_fonts/font = SubResource( 8 )
text = "username"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="edit" type="Button" parent="topleftmain"]
margin_left = -59.9073
margin_top = 52.9457
margin_right = -17.9073
margin_bottom = 89.9457
icon = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join" parent="topleftmain" instance=ExtResource( 17 )]
margin_left = -351.0
margin_top = 149.0
margin_right = -21.0
margin_bottom = 333.0

[node name="new" parent="topleftmain" instance=ExtResource( 17 )]
margin_left = -351.0
margin_top = 332.0
margin_right = -21.0
margin_bottom = 521.0

[node name="pic" parent="topleftmain/new" index="0"]
margin_left = 4.61017
margin_right = 324.611

[node name="name" parent="topleftmain/new" index="1"]
margin_left = 11.0
margin_top = 8.0
margin_right = 187.0
margin_bottom = 41.0
text = "new match"

[node name="aligner" type="Node2D" parent="."]
position = Vector2( -0.337296, 600.125 )
script = ExtResource( 5 )
bottom = true

[node name="close" type="Button" parent="aligner"]
margin_left = 13.0
margin_top = -34.0
margin_right = 68.0
margin_bottom = -11.0
custom_fonts/font = SubResource( 9 )
text = "close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="connectout" type="Timer" parent="."]
wait_time = 5.0

[node name="nameman" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 512.776, 293.452 )
bottom = true
right = true
scaleview = Vector2( 0.5, 0.5 )
invisiblestart = true

[node name="back" type="Panel" parent="nameman"]
margin_left = -214.0
margin_top = -52.0
margin_right = 228.0
margin_bottom = 83.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="entername" type="LineEdit" parent="nameman"]
margin_left = -205.373
margin_top = 14.5977
margin_right = 220.627
margin_bottom = 70.5977
custom_fonts/font = SubResource( 10 )
max_length = 12
placeholder_text = "your name"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="nameman"]
margin_left = -193.475
margin_top = -33.094
margin_right = 205.525
margin_bottom = 14.906
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.0836, 0.13706, 0.44, 1 )
text = "Enter your nickname"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="comfirm" type="Button" parent="nameman"]
margin_left = -73.3833
margin_top = 94.6817
margin_right = 80.6167
margin_bottom = 133.682
custom_fonts/font = SubResource( 12 )
text = "continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="joinman" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 512.776, 293.452 )
bottom = true
right = true
scaleview = Vector2( 0.5, 0.5 )
invisiblestart = true

[node name="back" type="Panel" parent="joinman"]
margin_left = -214.0
margin_top = -52.0
margin_right = 228.0
margin_bottom = 83.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="entername" type="LineEdit" parent="joinman"]
margin_left = -205.373
margin_top = 14.5977
margin_right = 220.627
margin_bottom = 70.5977
custom_fonts/font = SubResource( 10 )
max_length = 20
placeholder_text = "code"
placeholder_alpha = 0.111
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="joinman"]
margin_left = -193.475
margin_top = -33.094
margin_right = 205.525
margin_bottom = 14.906
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.0741, 0.121485, 0.39, 1 )
text = "Enter match code"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="comfirm" type="Button" parent="joinman"]
visible = false
margin_left = -73.3833
margin_top = 94.6817
margin_right = 80.6167
margin_bottom = 133.682
custom_fonts/font = SubResource( 12 )
text = "continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ip" type="Button" parent="joinman"]
margin_left = 157.627
margin_top = 87.3083
margin_right = 215.627
margin_bottom = 110.308
custom_fonts/font = SubResource( 13 )
text = "use ip"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ipman" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 506.488, 294.822 )
script = ExtResource( 16 )
bottom = true
right = true
scaleview = Vector2( 0.5, 0.5 )
invisiblestart = true

[node name="back" type="Panel" parent="ipman"]
margin_left = -221.379
margin_top = -78.7401
margin_right = 225.621
margin_bottom = 76.2599
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="ipman"]
margin_left = -210.766
margin_top = -70.2072
margin_right = 210.234
margin_bottom = -31.2072
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.0741, 0.121485, 0.39, 1 )
text = "enter connection info"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ip" type="LineEdit" parent="ipman"]
margin_left = -203.63
margin_top = -34.472
margin_right = 206.37
margin_bottom = 6.52805
custom_fonts/font = SubResource( 10 )
placeholder_text = "ip"
placeholder_alpha = 0.111
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="port" type="LineEdit" parent="ipman"]
margin_left = -204.518
margin_top = 14.6403
margin_right = 205.482
margin_bottom = 55.6403
custom_fonts/font = SubResource( 10 )
max_length = 5
placeholder_text = "port"
placeholder_alpha = 0.111
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="comfirm" type="Button" parent="ipman"]
margin_left = -75.6425
margin_top = 93.312
margin_right = 78.3575
margin_bottom = 132.312
custom_fonts/font = SubResource( 12 )
text = "continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="submenus" type="Node" parent="."]

[connection signal="pressed" from="cam/error/backtotitle" to="cam/error" method="_on_backtotitle_pressed"]
[connection signal="pressed" from="partyman/titlefri/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="partyman/code/ipshow" to="." method="_on_ipshow_pressed"]
[connection signal="pressed" from="partyman/code/copy" to="." method="_on_copy_pressed"]
[connection signal="pressed" from="partyman/br/start" to="." method="gotomatch"]
[connection signal="pressed" from="topleftmain/edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="topleftmain/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="topleftmain/new" to="." method="_on_new_pressed"]
[connection signal="pressed" from="aligner/close" to="." method="_on_close_pressed"]
[connection signal="timeout" from="connectout" to="." method="_on_connectout_timeout"]
[connection signal="text_entered" from="nameman/entername" to="." method="_on_entername_text_entered"]
[connection signal="pressed" from="nameman/comfirm" to="." method="_on_comfirm_pressed"]
[connection signal="text_changed" from="joinman/entername" to="." method="_on_entername_text_changed"]
[connection signal="pressed" from="joinman/comfirm" to="." method="_comfirmmatch"]
[connection signal="pressed" from="joinman/ip" to="." method="_on_ip_pressed"]
[connection signal="text_entered" from="ipman/ip" to="." method="_on_ip_text_entered"]
[connection signal="text_changed" from="ipman/port" to="ipman" method="_on_port_text_changed"]
[connection signal="text_entered" from="ipman/port" to="." method="_on_port_text_entered"]
[connection signal="pressed" from="ipman/comfirm" to="." method="ipgo"]

[editable path="topleft/join"]
[editable path="topleftmain/join"]
[editable path="topleftmain/new"]
